# PongCPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Pong/: Ball.cpp  Ball.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Drawable.cpp  Drawable.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Paddle.cpp  Paddle.h  VectorHelper.cpp  VectorHelper.h  common.h  constants.h
PongClient/: Ball.cpp  CMakeLists.txt  Client.cpp  Client.h  Paddle.cpp  Paddle.h  Pausable.cpp  VectorHelper.h  common.h  constants.h  main.cpp
PongServer/: Ball.cpp  Ball.h  CMakeLists.txt  Drawable.cpp  Drawable.h  GameManager.cpp  GameManager.h  Paddle.cpp  Paddle.h  Pausable.h  Server.cpp  Server.h  Tick.cpp  Tick.h  Vector2.cpp  Vector2.h  VectorHelper.h  constants.h  main.cpp
net_common/: CMakeLists.txt  agent.cpp  agent.h  common.h  packet.cpp  packet.h
